--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 <script type="module">
-  import init from "./myproject.js";
-  init("./myproject_bg.wasm").then(function (wasm) {
+  import init from "./target/wasm.js";
+  init("./target/wasm_bg.wasm").then(function (wasm) {
     wasm.run();
   });
 </script>
