--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <script type="module">
-  import init from "./target/wasm.js";
+  import init from "./wasm.js";
   // init("./target/wasm_bg.wasm").then(function (wasm) {
   init().then(function (wasm) {
     wasm.run();
