--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="utf-8"/>
-<title>My Bevy Project</title>
+<title>AMAVillager</title>
 </head>
 <body>
 <script type="module">
