--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <head>
   <meta charset="utf-8"/>
 <title>AMAVillager</title>
+<style>
+  body {min-height: 100vh; min-width: 100vh;}
+</style>
 </head>
 <body>
 <script type="module">
